- Implemented: -nocache command line option (ask browser not to cache pages)
- Implemented: Visual Crossing (replacement for Darksky/Forecast)
- Fixed: Chime structure check
- Fixed: Counter day charts, better hourly bars and usage
- Fixed: Device reordering when a room plan was selected
- Fixed: Forecast button now displays a working forecast
- Changed: MQTT-AD, better Unit calculation for scene/action devices
- Removed: native GoodWe hardware (use the new GoodWe python plugin instead)

Version 2023.1 (February 14 2023)
- For a full overview visit: https://www.domoticz.com/wiki/Domoticz_versions_-_Commits for details
- Implemented: Accept JWT tokens as authentication and Authorization Bearer tokens (either from internal or external IAM service)
- Implemented: Blinds, added option to schedule 0%
- Implemented: dzVents, OpenURL PATCH method
- Implemented: Enphase, redesign and added battery readings (Supports firmware V7)
- Implemented: Internal OAuth2/OIDC IAM service supporting 4 different flows (OAuth2 (RFC6749), PKCE extension (RFC7636) and JWT Tokens (RFC7519))
- Implemented: MQTT, added support for Lock status
- Implemented: MQTT, added support for wildcards in discovery topics
- Implemented: MQTT, climate preset mode
- Implemented: New 'auth' debug flag to see IAM related messages
- Implemented: Now 'Applications' can be registered to get secure access to Domoticz, see 'setup' menu (standard DomoticzUI app is registered by default)
- Implemented: P1 Meter, added number of (long) power failures, voltage sags/swells
- Implemented: SECURITY_SETUP.md describing the new/improved security setup
- Implemented: Support for basic OpenID Connect Discovery ('https://<DOMOTICZURL>/.well-known/openid-configuration')
- Implemented: Search option in Switches/Scenes/Temperature/Utility and Weather tab
- Implemented: The Security realm can be configured using the 'vhostname' option (default domoticz.com)